# libcan

./: CMakeLists.txt
include/: SocketCAN.h
src/: SocketCAN.cpp
test/: test.cpp
